chore : cards added

--- a/service2.html
+++ b/service2.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>service2</title>
 </head>
 
 <body>
     <main>
         <section>
-            <h1>Header</h1>
+            <h1>Service 2</h1>
         </section>
        
         <section>
@@ -17,7 +17,7 @@
         </section>
 
         <section>
-            service one route
+            service 2 route
         </section> 
 
     </main>
